--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@paypal/paypal-server-sdk": "^1.1.0",
     "body-parser": "^1.20.3",
     "dotenv": "^16.6.1",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "cors": "^2.8.5"
   }
 }
